--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -1,4 +1,4 @@
-// Simplex 3.0.0
+// Cyborg 3.0.0
 // Variables
 // --------------------------------------------------
 
@@ -9,42 +9,42 @@
 // Grays
 // -------------------------
 
-@gray-darker:            lighten(#000, 13.5%); // #222
-@gray-dark:              lighten(#000, 20%);   // #333
-@gray:                   lighten(#000, 33.5%); // #555
-@gray-light:             lighten(#000, 60%);   // #999
-@gray-lighter:           lighten(#000, 93.5%); // #eee
+@gray-darker:            #222;
+@gray-dark:              #282828;
+@gray:                   #555;
+@gray-light:             #888;
+@gray-lighter:           #ADAFAE; // #eee
 
 // Brand colors
 // -------------------------
 
-@brand-primary:         #D9230F;
-@brand-success:         #3D9400;
-@brand-warning:         #9B479F;
-@brand-danger:          #D9831F;
-@brand-info:            #029ACF;
+@brand-primary:         #2A9FD6;
+@brand-success:         #77B300;
+@brand-warning:         #FF8800;
+@brand-danger:          #CC0000;
+@brand-info:            #9933CC;
 
 // Scaffolding
 // -------------------------
 
-@body-bg:               #F7F7F7;
-@text-color:            @gray-dark;
+@body-bg:               #060606;
+@text-color:            @gray-light;
 
 // Links
 // -------------------------
 
 @link-color:            @brand-primary;
-@link-hover-color:      darken(@link-color, 15%);
+@link-hover-color:      @link-color;
 
 // Typography
 // -------------------------
 
-@font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 @font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
-@font-size-base:          13px;
+@font-size-base:          14px;
 @font-size-large:         ceil(@font-size-base * 1.25); // ~18px
 @font-size-small:         ceil(@font-size-base * 0.85); // ~12px
 
@@ -93,12 +93,12 @@
 @table-cell-padding:                 8px;
 @table-condensed-cell-padding:       5px;
 
-@table-bg:                           transparent; // overall background-color
-@table-bg-accent:                    #f9f9f9; // for striping
-@table-bg-hover:                     #f5f5f5;
+@table-bg:                           darken(@gray-darker, 4%); // overall background-color
+@table-bg-accent:                    darken(@table-bg, 6%); // for striping
+@table-bg-hover:                     @gray-dark;
 @table-bg-active:                    @table-bg-hover;
 
-@table-border-color:                 #ddd; // table and cell border
+@table-border-color:                 @gray-dark; // table and cell border
 
 
 // Buttons
@@ -107,7 +107,7 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              #fff;
-@btn-default-bg:                 #474949;
+@btn-default-bg:                 lighten(@gray-dark, 10%);
 @btn-default-border:             @btn-default-bg;
 
 @btn-primary-color:              @btn-default-color;
@@ -140,7 +140,7 @@
 @input-bg-disabled:              @gray-lighter;
 
 @input-color:                    @text-color;
-@input-border:                   #ccc;
+@input-border:                   @gray-dark;
 @input-border-radius:            @border-radius-base;
 @input-border-focus:             #66afe9;
 
@@ -151,7 +151,7 @@
 @input-height-small:             (ceil(@font-size-small * @line-height-base) + (@padding-small-vertical * 2) + 2);
 
 @legend-color:                   @text-color;
-@legend-border-color:            #e5e5e5;
+@legend-border-color:            @gray-dark;
 
 @input-group-addon-bg:           @gray-lighter;
 @input-group-addon-border-color: @input-border;
@@ -160,15 +160,15 @@
 // Dropdowns
 // -------------------------
 
-@dropdown-bg:                    #fff;
-@dropdown-border:                rgba(0,0,0,.15);
-@dropdown-fallback-border:       #ccc;
-@dropdown-divider-bg:            #e5e5e5;
+@dropdown-bg:                    @gray-darker;
+@dropdown-border:                rgba(255,255,255,0.1);
+@dropdown-fallback-border:       #444;
+@dropdown-divider-bg:            rgba(255,255,255,0.1);
 
 @dropdown-link-active-color:     #fff;
 @dropdown-link-active-bg:        @component-active-bg;
 
-@dropdown-link-color:            @gray-dark;
+@dropdown-link-color:            #fff;
 @dropdown-link-hover-color:      #fff;
 @dropdown-link-hover-bg:         @dropdown-link-active-bg;
 
@@ -236,53 +236,53 @@
 // -------------------------
 
 // Basics of a navbar
-@navbar-height:                    40px;
+@navbar-height:                    50px;
 @navbar-margin-bottom:             @line-height-computed;
-@navbar-default-color:             @gray-dark;
-@navbar-default-bg:                #fff;
+@navbar-default-color:             @text-color;
+@navbar-default-bg:                @body-bg;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 @navbar-border-radius:             @border-radius-base;
-@navbar-padding-horizontal:        floor(@grid-gutter-width / 2);  // ~15px
+@navbar-padding-horizontal:        floor(@grid-gutter-width / 2);
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 
 // Navbar links
-@navbar-default-link-color:                @gray-dark;
-@navbar-default-link-hover-color:          @brand-primary;
+@navbar-default-link-color:                @text-color;
+@navbar-default-link-hover-color:          #fff;
 @navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         @navbar-default-link-hover-color;
+@navbar-default-link-active-color:         #fff;
 @navbar-default-link-active-bg:            transparent;
-@navbar-default-link-disabled-color:       #444;
+@navbar-default-link-disabled-color:       @gray-light;
 @navbar-default-link-disabled-bg:          transparent;
 
 // Navbar brand label
-@navbar-default-brand-color:               @navbar-default-link-color;
-@navbar-default-brand-hover-color:         @navbar-default-link-hover-color;
+@navbar-default-brand-color:               #fff;
+@navbar-default-brand-hover-color:         #fff;
 @navbar-default-brand-hover-bg:            transparent;
 
 // Navbar toggle
-@navbar-default-toggle-hover-bg:           #ddd;
+@navbar-default-toggle-hover-bg:           @gray-dark;
 @navbar-default-toggle-icon-bar-bg:        #ccc;
-@navbar-default-toggle-border-color:       #ddd;
+@navbar-default-toggle-border-color:       @gray-dark;
 
 
 // Inverted navbar
 //
 // Reset inverted navbar basics
-@navbar-inverse-color:                      #fff;
-@navbar-inverse-bg:                         @brand-primary;
+@navbar-inverse-color:                      @gray-light;
+@navbar-inverse-bg:                         @gray-darker;
 @navbar-inverse-border:                     darken(@navbar-inverse-bg, 10%);
 
 // Inverted navbar links
-@navbar-inverse-link-color:                 #fff;
-@navbar-inverse-link-hover-color:           lighten(@brand-primary, 40%);
+@navbar-inverse-link-color:                 @gray-light;
+@navbar-inverse-link-hover-color:           #fff;
 @navbar-inverse-link-hover-bg:              transparent;
 @navbar-inverse-link-active-color:          @navbar-inverse-link-hover-color;
 @navbar-inverse-link-active-bg:             transparent;
-@navbar-inverse-link-disabled-color:        #ccc;
+@navbar-inverse-link-disabled-color:        #aaa;
 @navbar-inverse-link-disabled-bg:           transparent;
 
 // Inverted navbar brand label
-@navbar-inverse-brand-color:                @navbar-inverse-link-color;
+@navbar-inverse-brand-color:                #fff;
 @navbar-inverse-brand-hover-color:          #fff;
 @navbar-inverse-brand-hover-bg:             transparent;
 
@@ -294,31 +294,31 @@
 @navbar-inverse-search-placeholder-color:   #ccc;
 
 // Inverted navbar toggle
-@navbar-inverse-toggle-hover-bg:            darken(@navbar-inverse-bg, 10%);
+@navbar-inverse-toggle-hover-bg:            #333;
 @navbar-inverse-toggle-icon-bar-bg:         #fff;
-@navbar-inverse-toggle-border-color:        darken(@navbar-inverse-bg, 10%);
+@navbar-inverse-toggle-border-color:        #333;
 
 
 // Navs
 // -------------------------
 
 @nav-link-padding:                          10px 15px;
-@nav-link-hover-bg:                         @gray-lighter;
+@nav-link-hover-bg:                         @gray-darker;
 
 @nav-disabled-link-color:                   @gray-light;
 @nav-disabled-link-hover-color:             @gray-light;
 
-@nav-open-link-hover-color:                 #fff;
+@nav-open-link-hover-color:                 @gray-darker;
 @nav-open-caret-border-color:               #fff;
 
 // Tabs
-@nav-tabs-border-color:                     #ddd;
+@nav-tabs-border-color:                     @gray-dark;
 
-@nav-tabs-link-hover-border-color:          @gray-lighter;
+@nav-tabs-link-hover-border-color:          transparent;
 
-@nav-tabs-active-link-hover-bg:             @body-bg;
-@nav-tabs-active-link-hover-color:          @gray;
-@nav-tabs-active-link-hover-border-color:   #ddd;
+@nav-tabs-active-link-hover-bg:             @brand-primary;
+@nav-tabs-active-link-hover-color:          #fff;
+@nav-tabs-active-link-hover-border-color:   @gray-dark;
 
 @nav-tabs-justified-link-border-color:            #ddd;
 @nav-tabs-justified-active-link-border-color:     @body-bg;
@@ -331,13 +331,13 @@
 // Pagination
 // -------------------------
 
-@pagination-bg:                        #fff;
-@pagination-border:                    #ddd;
+@pagination-bg:                        @gray-darker;
+@pagination-border:                    @gray-dark;
 
 @pagination-hover-bg:                  @gray-lighter;
 
-@pagination-active-bg:                 #f5f5f5;
-@pagination-active-color:              @gray-light;
+@pagination-active-bg:                 @brand-primary;
+@pagination-active-color:              #fff;
 
 @pagination-disabled-color:            @gray-light;
 
@@ -353,8 +353,8 @@
 // -------------------------
 
 @jumbotron-padding:              30px;
-@jumbotron-color:                inherit;
-@jumbotron-bg:                   darken(@body-bg, 3%);
+@jumbotron-color:           inherit;
+@jumbotron-bg:                   darken(@gray-darker, 5%);
 
 @jumbotron-heading-color:        inherit;
 
@@ -362,20 +362,20 @@
 // Form states and alerts
 // -------------------------
 
-@state-warning-text:             #c09853;
-@state-warning-bg:               #fcf8e3;
+@state-warning-text:             #fff;
+@state-warning-bg:               @brand-warning;
 @state-warning-border:           darken(spin(@state-warning-bg, -10), 3%);
 
-@state-danger-text:              #b94a48;
-@state-danger-bg:                #f2dede;
+@state-danger-text:              #fff;
+@state-danger-bg:                @brand-danger;
 @state-danger-border:            darken(spin(@state-danger-bg, -10), 3%);
 
-@state-success-text:             #468847;
-@state-success-bg:               #dff0d8;
+@state-success-text:             #fff;
+@state-success-bg:               @brand-success;
 @state-success-border:           darken(spin(@state-success-bg, -10), 5%);
 
-@state-info-text:                #3a87ad;
-@state-info-bg:                  #d9edf7;
+@state-info-text:                #fff;
+@state-info-bg:                  @brand-info;
 @state-info-border:              darken(spin(@state-info-bg, -10), 7%);
 
 
@@ -391,15 +391,15 @@
 
 // Popovers
 // -------------------------
-@popover-bg:                          #fff;
+@popover-bg:                          lighten(@body-bg, 10%);
 @popover-max-width:                   276px;
 @popover-border-color:                rgba(0,0,0,.2);
-@popover-fallback-border-color:       #ccc;
+@popover-fallback-border-color:       #999;
 
 @popover-title-bg:                    darken(@popover-bg, 3%);
 
 @popover-arrow-width:                 10px;
-@popover-arrow-color:                 #fff;
+@popover-arrow-color:                 @popover-bg;
 
 @popover-arrow-outer-width:           (@popover-arrow-width + 1);
 @popover-arrow-outer-color:           rgba(0,0,0,.25);
@@ -427,12 +427,12 @@
 @modal-title-padding:         15px;
 @modal-title-line-height:     @line-height-base;
 
-@modal-content-bg:                             #fff;
+@modal-content-bg:                             lighten(@body-bg, 10%);
 @modal-content-border-color:                   rgba(0,0,0,.2);
 @modal-content-fallback-border-color:          #999;
 
 @modal-backdrop-bg:           #000;
-@modal-header-border-color:   #e5e5e5;
+@modal-header-border-color:   @gray-dark;
 @modal-footer-border-color:   @modal-header-border-color;
 
 
@@ -461,7 +461,7 @@
 
 // Progress bars
 // -------------------------
-@progress-bg:                 #f5f5f5;
+@progress-bg:                 @gray-darker;
 @progress-bar-color:          #fff;
 
 @progress-bar-bg:             @brand-primary;
@@ -473,29 +473,29 @@
 
 // List group
 // -------------------------
-@list-group-bg:               #fff;
-@list-group-border:           #ddd;
+@list-group-bg:               @gray-darker;
+@list-group-border:           @gray-dark;
 @list-group-border-radius:    @border-radius-base;
 
-@list-group-hover-bg:         #f5f5f5;
+@list-group-hover-bg:         lighten(@list-group-bg, 15%);
 @list-group-active-color:     #fff;
 @list-group-active-bg:        @component-active-bg;
 @list-group-active-border:    @list-group-active-bg;
 
-@list-group-link-color:          #555;
-@list-group-link-heading-color:  #333;
+@list-group-link-color:          @text-color;
+@list-group-link-heading-color:  #fff;
 
 
 // Panels
 // -------------------------
-@panel-bg:                    #fff;
-@panel-inner-border:          #ddd;
+@panel-bg:                    @gray-darker;
+@panel-inner-border:          @gray-dark;
 @panel-border-radius:         @border-radius-base;
 @panel-footer-bg:             @panel-default-heading-bg;
 
 @panel-default-text:          @gray-dark;
-@panel-default-border:        #ddd;
-@panel-default-heading-bg:    @body-bg;
+@panel-default-border:        @panel-inner-border;
+@panel-default-heading-bg:    lighten(@gray-darker, 10%);
 
 @panel-primary-text:          #fff;
 @panel-primary-border:        @brand-primary;
@@ -531,16 +531,16 @@
 
 // Wells
 // -------------------------
-@well-bg:                     darken(@body-bg, 3%);
+@well-bg:                     darken(@gray-darker, 5%);
 
 
 // Badges
 // -------------------------
 @badge-color:                 #fff;
 @badge-link-hover-color:      #fff;
-@badge-bg:                    @gray-light;
+@badge-bg:                    @brand-primary;
 
-@badge-active-color:          @link-color;
+@badge-active-color:          @brand-primary;
 @badge-active-bg:             #fff;
 
 @badge-font-weight:           bold;
@@ -550,9 +550,9 @@
 
 // Breadcrumbs
 // -------------------------
-@breadcrumb-bg:               transparent;
-@breadcrumb-color:            #ccc;
-@breadcrumb-active-color:     @gray-light;
+@breadcrumb-bg:               @gray-darker;
+@breadcrumb-color:            #fff;
+@breadcrumb-active-color:     @text-color;
 
 
 // Carousel
@@ -593,15 +593,15 @@
 @text-muted:                  @gray-light;
 @abbr-border-color:           @gray-light;
 @headings-small-color:        @gray-light;
-@blockquote-small-color:      @gray-light;
-@blockquote-border-color:     @gray-lighter;
-@page-header-border-color:    @gray-lighter;
+@blockquote-small-color:      @gray;
+@blockquote-border-color:     @gray-dark;
+@page-header-border-color:    @gray-dark;
 
 // Miscellaneous
 // -------------------------
 
 // Hr border color
-@hr-border:                   @gray-lighter;
+@hr-border:                   @gray-dark;
 
 // Horizontal forms & lists
 @component-offset-horizontal: 180px;
