--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
       li
         a(href="/tasks") Completed
   .home
-    p This is an example of classical (no front-end JavaScript framewors) web application built with Express.js 3.3.5 for 
+    p This is an example of classical (no front-end JavaScript frameworks) web application built with Express.js 3.3.5 for 
       a(href="http://expressjsguide.com") Express.js Guide
       |.
     p The full source code is available at 
