--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title= title + ' | ' + appname
     link(rel="stylesheet", href="/stylesheets/style.css")
-    link(rel="stylesheet", href="/less/bootstrap.css")
+    link(rel="stylesheet", href="/bootstrap/bootstrap.css")
     link(rel="stylesheet", href="/stylesheets/main.css")
 
   body
