--- a/views/tasks_completed.jade
+++ b/views/tasks_completed.jade
@@ -22,6 +22,6 @@ block content
         div.num
           span=index+1
             |.&nbsp;
-        div.name
+        div.name.completed-task
           span.name=task.name
 
