--- a/app.js.tmpl
+++ b/app.js.tmpl
@@ -19,7 +19,7 @@ app.locals.appname = 'Express.js Todo App'
 // all environments
 
 
-app.set('port', process.env.PORT || 3000);
+app.set('port', $PORT);
 app.set('views', __dirname + '/views');
 app.set('view engine', 'jade');
 app.use(express.favicon());
