update ALL the verions! :art: :fish:

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,10 +11,13 @@ block content
       li
         a(href="/tasks") Completed
   .home
-    p This is an example of classical (no front-end JavaScript frameworks) web application built with Express.js 3.3.5 for 
-      a(href="http://expressjsguide.com") Express.js Guide
+    p This is an example of create, read, update, delete web application built with Express.js v4.8.1, and Mongoskin&MongoDB for&nbsp;
+      a(href="http://proexpressjs.com") Pro Express.js
       |.
-    p The full source code is available at 
+    p The full source code is available at&nbsp;
       a(href='http://github.com/azat-co/todo-express') github.com/azat-co/todo-express
+      |.
+    p For Express 3.x go to&nbsp;
+      a(href="https://github.com/azat-co/todo-express/releases/tag/v0.1.0") release 0.1.0
       |.
 
